--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Material+Icons&display=block" rel="stylesheet">
   <title>Template | Lit 3 &amp; Weightless</title>
-  <link href="/src/style.scss" rel="stylesheet" type="text/css"/>
+  <link href="/src/style.scss" rel="stylesheet"/>
   <script src="/src/index.ts" type="module"></script>
 </head>
 
