chore(deps): update deps

--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,12 +1,13 @@
 <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
 
-<script>try {
-  WebFont.load({
-    google: {
-      families: ['Poppins', 'Material+Icons']
-    }
-  });
-} catch (error) {
-  console.error(error);
-}
+<script>
+  try {
+    WebFont.load({
+      google: {
+        families: ['Poppins', 'Material+Icons']
+      }
+    });
+  } catch (error) {
+    console.error(error);
+  }
 </script>
